# Trading-bot

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_REPORT.md  INITIALIZATION_COMPLETE.md  QUICK_START.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_MANUAL.md  VIRTUAL_ENV_SETUP.md  activate_env.sh  requirements.txt  test_connection.html
.serena/: project.yml
.serena/memories/: actual_project_status_report.md  code_quality_analysis_report.md  codebase_structure.md  coding_standards.md  comprehensive_test_summary.md  final_test_completion_report.md  phase1_completion_report.md  phase1_test_completion_report.md  phase2_test_completion_report.md  project_overview.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md  testing_comprehensive_report.md  testing_phase1_completion_report.md  virtual_environment_setup.md
docs/: phase2_completion_report.md  phase3_completion_report.md  prd-1.0.md  prd-1.01-bugfix-2.md  prd-1.01-test-2.md  prd-1.01.md
docs/v1.01/: prd-1.01-bugfix-1.md  prd-1.01-test-1.md
docs/v1.02/: neon-future-design-system.md  neon-ui-user-guide.md  prd-1.02-implementation-guide.md  prd-1.02.md  test-1-1.02.md  v1.02-final-acceptance-report.md
docs/v1.03/: TECHNICAL_DOCUMENTATION.md  USER_MANUAL.md  prd-1.03.md  v1.03_phase4_final_testing_and_delivery_report.md
examples/: dynamic_position_example.py  trading_system_example.py
frontend/: README.md  index.html  jest.config.js  vite.config.ts
frontend/coverage/: clover.xml  lcov.info
frontend/public/: neon_ui_test.html  phase1_interface_simplification_test.html  phase2_neon_components_test.html  phase3_animation_optimization_test.html  phase3_realtime_monitoring_test.html  phase4_cross_browser_test.html  phase4_risk_management_simplification_test.html  phase5_test.html  phase5_testing_optimization_report.html  test.html  v1.02_final_showcase.html  v1.03_final_testing_and_delivery.html  v1.03_phase1_neon_dashboard_test.html  v1.03_phase2_neon_backtest_visualization.html  v1.03_phase2_strategy_center_test.html  v1.03_phase2_trading_center_test.html  (+3 more)
python/: __init__.py
scripts/: diagnostic.sh  setup.sh  start_dev.bat  start_dev.sh  test_api.sh  verify.py
src/: lib.rs  main.rs
tests/: integration_test_phase2.py  phase3_e2e_test.py  phase4_acceptance_test.py  test_trading_system.py
(+88 files in other folders)
